fixed overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,6 +33,12 @@ html {
     scroll-padding-top: 60px;
   }
 }
+body {
+  width: 100%;
+  min-height: 100vh;
+  margin: 0;
+  overflow-x: hidden;
+}
 
 ul {
   list-style: none;
